--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 asgiref==3.3.1
+black==22.6.0
+click==8.1.3
 Django==3.1.13
 django-restframework==0.0.1
+isort==5.10.1
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.5.2
 pytz==2021.1
 sqlparse==0.4.2
+tomli==2.0.1
+typing_extensions==4.3.0
